# linux-to-mac-rbe-demo

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: ci.yml
DemoApp/: BUILD.bazel  DemoApp.swift  DemoTest.swift
